--- a/requirements.txt
+++ b/requirements.txt
@@ -177,6 +177,7 @@ spyder==3.3.4
 spyder-kernels==0.4.4
 SQLAlchemy==1.3.1
 statsmodels==0.9.0
+style==1.1.0
 sympy==1.3
 tables==3.5.1
 tblib==1.3.2
@@ -188,7 +189,8 @@ tqdm==4.31.1
 traitlets==4.3.2
 typed-ast==1.3.5
 unicodecsv==0.14.1
-urllib3==1.24.1
+update==0.0.1
+urllib3==1.25.3
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
